--- a/index.html
+++ b/index.html
@@ -164,151 +164,7 @@
         document.addEventListener('DOMContentLoaded', () => {
             // --- DICTIONARY DATA (from user's file) ---
             const dictionaryText = `
-Từ,Nghĩa
-Abao (dt),Ốc bươu.
-Abăn (dt),Cái chăn (mền). Msăm abăn: đăp chăn; Abăn hmlei: Chăn bông.
-Abŭ (dt),Cái hũ.
-Adei (dt),Em.
-Adĕ (dt),Hến.
-Adham (dt),Một nhóm trong tộc người Êđê.
-Adhan (dt),Cành. Adhan kyâo: Cành cây.
-Adhei (dt),Trán. Adhei: Trán rộng.
-Adiê (dt),Trời. Adiê hjan: Trời mưa.
-Adiê không,Năng hạn.
-Adiê tlam,Xế chiều.
-Adih (đt),Kia. Sang kâo ti anôk adih: Nhà tôi chỗ kia; Hruê aguah adih kâo đue# hiu: Sáng ngày kia tôi đi chơi.
-Adôk (đgt),Còn. Kâo adôk prăk: Tôi còn tiền; Adôk hdyøp: Còn sống.
-Adrăng (dt),Rơm rạ. Mkăm adrăng: đống rơm.
-Adring (dt),"Hiên nhà sàn. Amyø kâo [hu mdiê ti adring: Mẹ tôi phơi luôa ở hiên nhà sàn."
-Adrŏk (dt),Con cóc.
-Aduôn (dt),Bà (nội)
-Adŭ (dt),"1.Phòng. Adu\ pyøt: Phòng ngủ; Adu\ hriăm: Phòng học. 2. Lớp. Adu\ năm: Lớp 6; Adu\ pluh dua: Lớp 12. 3. Cái ô. Adu\ ju\: eø màu đen."
-Adŭ bruă (dt),Văn phòng.
-Adŭ gĭt gai bruă kiă kriê (dt) ,Phòng hành chính.
-Adŭ tĭng yap (dt),Phòng kế tín.
-Adŭng (dt),Mũi. {ăng adu\ng: Lỗ mũi.
-Aê (dt),Eøng (nội)
-Aê êa drao (dt),Bác sĩ. Aê êa drao jing pô mdrao klei ruă kơ jih jang mnuih: Bác sĩ là người chữa bệnh cho mọi người.
-Agam (tt),Loạn luân. Klei ngă agam jing soh ho\ng klei bhiăn anak Êđê: Loạn luân là hành động vi phạm phong tục của người Êđê.
-Agha (dt),Rễ. Agha kram: Rễ tre.
-Aguah (trạng từ),Buổi sáng. Aguah ưm: Sáng sớm; Aguah mgi: Sáng mai; Aguah mbruê: Sáng hôm qua.
-Aguăt (dt),"Con bọ cạp. Aguăt du\] ruă snăk: Bọ cạp đốt rất đau."
-Ah (hư từ) ,Ạ. Kâo thâo klei soh leh amyø ah: con biết lỗi rồi mẹ ạ.
-Ai (dt),Sức. Ai ktang: Sức mạnh.
-Ai hriăm (dt),Học lực.
-Ai êwa (dt) (tt),Khí thế
-Ai mĭn (đgt),Suy nghĩ. Tui si ai kâo myøn: Theo tôi nghĩ.
-Ajĭk (dt),Eùaúch.
-Ak (dt),Con quạ. Ju\ mse\ si ak: đen như quạ.
-Akăt (dt),Bụi (khóm). Akăt kram: Bụi tre.
-Akâo (đgt),Xin. Akâo prăk: Xin tiền; Akâo êa mnăm: Xin nước uống.
-Ala (dt),Con răn. Ala knăl: Răn giun; Ala mtah: Răn lục.
-Ala čar (dt),"Tổ quốc. Ala ]ar Việt Nam: Tổ quốc Việt Nam. "
-Ala čar tač êngao (dt) ,Nước ngịi.
-Alah (tt),Lười biếng. Alah mă bruă: Lười làm việc; Mnuih alah: Người lười biếng.
-Alah alan (tt),Uể oải. Mă bruă alah alan: Làm việc uể oải.
-Ală (dt),Măt. Pyøt ală: Nhăm măt.
-Ală kĭng (dt),Kính. Truă ală kyøng: đeo kính.
-Ală mmăt (tt),Cận thị. Ală mmăt kjham: Măt cận thị nặng.
-"Alĕ, Aluê̆ (đgt)",Nhả. Ale\ djah êhăng: Nhả bã trầu.
-Alê (dt),Le.
-Alôk (đgt),"Lột. Alôk boh [ơr: Lột vỏ quả bơ."
-Alum akâo (đgt),Cầu xin. Alum akâo kơ aê êa drao đru mdrao brei anak kâo: Cầu xin bác sĩ cứu chữa con tôi.
-Alum kkuh (đgt),Kính thưa.
-Alum mpŭ (đgt),Trân trọng
-Alŭ (dt),Thôn
-Alŭ wăl (dt),Vùng.
-Alŭ ƀuôn prŏng,Phố phường.
-Alưñ (tt),Gớm. Alưyû bưyû: Gớm giếc.
-Am pul pui (dt) ,Bóng đèn. Am pul pui kmlă: Bóng điện.
-Ama (dt),Bố (cha).
-Amai (dt),Chị.
-Amâo (pht),Không. Amâo mâo: Không có; Kâo amâo mâo prăk: Tôi không có tiền; Amâo guôp: Không hợp.
-Amâo dah (lt),Hay (hoặc). Kâo amâo dah ih nao: Tôi hay anh đi.
-Amâo djŏ ai (tt),Không vừa lòng. Aáu mă bruă amâo djo\ ai amyø ama: Nó làm việc không vừa lòng bố mẹ.
-Amâo djŏ knŏng (trgt),Chẳng những.
-Amâo kpă (tt),Bất chính. Klei ngă amâo kpă: Hành động bất chính.
-Amâo klă mngač (tt),"Bất minh. Mje\ mjuk amâo klă mnga]: Quan hệ bất minh."
-Amâo răk (đgt),Bất cứ
-Amâo răk rai (hư từ),Bất diệt. Klei đao\ knang amâo răk rai: Niềm tin bất diệt.
-Amâo thâo knga (tt),Vô ơn.: Người vô ơn.
-Amâo mâo tŭ ư (đgt),Phản đối. Tôi phản đối anh ta làm việc không đúng.
-Amiêt (dt),Cậu. Anei amiêt kâo: đây là cậu tôi.
-Amĭ (dt),Mẹ (má).
-Amĭ ama hđeh (dt),Phụ huynh.
-Amlơ̆k (dt),"Cám. Amlơ\k ]iêm u\n: Cám lợn."
-Amra (pht),Sẽ. Kâo amra nao: Tôi sẽ đi.
-Amrak (dt),Con công. Rông amrak pioh dlăng: Nuôi công làm cảnh.
-Amrê̆č (dt),"Eûoût. Sang kâo mâo pla amre#]: nhà tôi có trồng ớt."
-Amung mtei (dt),Buồng chuối. Amyø koh amung mtei: Mẹ chặt buồng chuối.
-Amung mdiê (dt),Bông luôa.
-Amung kngan (dt),Mu tay.
-Amung ŭn (dt),Mõm lợn (heo).
-Amuôn (dt),Cháu (cháu với cậu)
-Ana,I.(dt) cây. Ana kneh: cây mít. Ana truôl: cây ổi. Ii.(tt) giống cái (từ dùng chỉ động vật giống cái). Uyõn ana: lợn nái; mnu\ ana: gà mái.
-Anak (dt),Con (dùng cho người).
-Anak ală (dt),Con ngươi.
-Anak ĭ (dt),Trẻ sơ sinh.
-Anak rai (dt),Con rồng.
-Anal (dt),Con sâu nái.
-Anal kŏ (dt),Cái gối.
-Anăn,I.(dt) tên. Anăn kâo nam: tên tôi là nam. Ii.(đại từ chỉ định) đó
-Anăn kdrưh (dt),Danh hiệu.
-Anăp (giơïi từ),Trước. Ti anăp: Phía trước.
-Anei (đt),"Đây. Anei [yøng kâo: đây là bạn tôi. Kâo mă bruă ti anei: tôi làm việc ở đây. "
-Aneh (dt),Deã.
-Angĭn (dt),Gió. Angyøn dưr: Gió băc. Angyøn đru\ng: Gió lốc
-Angĭn êbŭ (dt),Bão.
-Angưr (đgt),Ngẩng. Angưr ko\: Ngẩng đầu.
-Anghar (đgt),"Ngáy. Pyøt anghar [rok [rok: Ngủ ngáy khò khò."
-Anôk (dt),Nơi
-Anôk dôk (dt),Nơi ở
-Anôk dôk êjai (dt),Nơi tạm truô.
-Anôk mjưh (dt),Nơi dừng. Anôk mjưh êdeh: Bến xe.
-Anôk mjưh mran (dt),Cảng.
-Anuă (dt),Cái cưa.
-Anŭng (dt),Tuôi. Anu\ng hăt: Tuôi thuốc lá.
-Anur (dt),Con duôi.
-Anut (dt),Cái cuôc áo. Sa boh anut: Một cái cuôc.
-Añŭ (dt),Hạt cườm (chuỗi). Kngan buh ayûu\: Cổ tay đeo cườm.
-Añuê (dt),Chiếu. Lang ayûuê kơ adei pyøt: Trải chiếu cho em ngủ.
-Añhuôr (đgt),"Duỗi. Ayûhuôr jơ\ng ]iăng đăm êgah: Duỗi chân cho đỡ mỏi."
-Añhuih (đgt),Hỉ. Ayûhuih êa adu\ng: Hỉ mũi.
-Ao (dt),Aoûo. Ao ko#: Aoûo trăng. Ao hjan: Aoûo mưa.
-Ap (đgt),Đè.
-Ap gư̆ (đgt) ,Đàn áp.
-Aprŏng (dt),Bác (chị của mẹ).
-Ară anei (trgt),Hiện nay
-Arăn (đgt),Rặn. Arăn kkiêng: Rặn sinh.
-Arăng (đt),Người ta. Kâo hmư\ arăng blu\ lu kơ ayo\ng: Tôi nghe người ta nói nhiều về anh.
-Areh (dt),Con rệp. Areh ke\ ktăl êdi: Rệp căn ngứa thật.
-Ariêng (dt),Con cua.
-Aruăt (dt),Gân
-Arul (dt),Họ của người Êđê.
-Arưp aram (đgt),"Đe dọa. Phung roh arưp aram mdjiê jih mnuih [uôn sang: bọn giặc đe dọa giết sạch dân làng."
-Asăp (dt),"1. Lời. Asăp blu\: Lời nói. 2. Khói. Asăp pui: Khói lửa."
-Asăp mtrŭn (dt),Nghị quyết
-Asăr (dt),"1.hạt 2. Viên. Asăr phao: Viên đạn."
-Aseh (dt),Con ngựa. Sang kâo mâo rông dua drei aseh ko#: Nhà tôi có nuôi hai con ngựa trăng.
-Asâo (dt),Con chó. Rông dua drei asâo: Nuôi hai con chó.
-Asei (dt),Thân
-Asei mlei (dt),Thân thể
-Asei wah (dt),Lưỡi câu.
-Atăt (đgt),Đón. Atăt ba kâo nao truh ti anôk ayo\ng mă bruă: Đón tôi đi đến nơi anh làm việc.
-Atâo (dt),Người chết (thi hài người chết).
-Ai tiê (dt),Tấm lòng.
-Ai tiê jăk (dt),Sự tốt bụng
-Ai tiê kriăng (tt),Chăm chỉ
-Atŭt (dt),Đốt. Atu\t kram: đốt tre; atu\t kđiêng kngan: đốt ngón tay. Atu\t klang ro\ng: đốt sống.
-Atiêng (dt),Nhánh. Atiêng êya: Nhánh gừng.
-Awa (dt),Bác (anh trai và chị gái của bố). Awa Hồ: Bác Hồ.
-Awak (dt),Cái theãa.
-Awak boh (dt),Cái muôi (làm băôûng tre).
-Awan (dt),Khuôc
-Awăt (tt),Yếu
-Ayŏng (dt),Anh. Ayo\ng adei: Anh em.
-Ayŏng khua (dt),Anh cả.
- 	Nghĩa
+Từ Nghĩa
 Abao (dt)	ốc bươu
 Abăn (dt)	Cái chăn (mền)
 Abŭ (dt)	Cái hũ.
@@ -1515,14 +1371,8 @@ Et ot (đgt)	1.õng ẻo
 êyuh (đgt)	Lay
 êyuh kngan (đgt)	Băt tay nhau.
 êyui (dt)	Bóng
-	
-Ê̆	
-	
 Ê̆č (dt)	Rau quế
 Ê̆č dliê (dt)	Hương nhu
-	
-G	
-	
 Ga (dt)	Khí đốt
 Gah (dt)                   	Nhà ngoại (phần phía trước của nhà dài Êđê dành cho khách và cho sinh hoạt lễ hội).
 Gai (đgt)	điều khiển
@@ -1626,9 +1476,6 @@ Gúk (dt)	Guốc mang.
 Gúl (dt)	Cây cọ.
 Gŭt gu (tt)	Gật gù.
 Gư̆ (đgt)	aõaún
-	
-H	
-	
 Ha (đgt)	Há
 Hah (phụ từ)	đây
 Hal (đgt)	Xẻ
@@ -1943,9 +1790,6 @@ H’ôk (đgt)	đành lòng
 H’ua (đgt)	Cà vào
 H’ún (đgt)	Thương yêu
 H’ưi (đgt)	Thương tiếc.
-	
-i	
-	
 iăm (đgt)	Mô phỏng tiếng ve kêu.
 i- ăk riăk (đgt)	Khúc khích.
 iê (dt)	Anh rễ; chị dâu (nói chung).
@@ -1968,15 +1812,9 @@ ing ba k’ông	Rập rình (mô phỏng tiếng chiêng trống)
 ing tlam	Chạng vạng.
 iu (tt)	Thiu
 iŭ (đgt)	Thổi
-	
-ĭ	
-	
 ĭ (dt)	Sơ sinh
 ĭr ĭr (tt)	Rừng rực (lửa cháy)
 ĭt út (tt)	Lề mề
-	
-J	
-	
 Jač (đgt)	Neôm
 Jah (đgt)	Phát
 Jak (đgt)	Mời
@@ -2002,7 +1840,6 @@ Jhŭk jhŭk (tt)	Hùng dũng
 Jhưng (dt)	Giường
 Jia (dt)	Thuế
 Jiă	i.(tt) 1.Nhiễm
-	
 	ii.(đgt) Nheôt
 Jiăng (tt)	Bạn bè trai thân nhau (gọi là jiăng)
 Jiêk (đgt)	Nheôt
@@ -2010,7 +1847,6 @@ Jih (đgt)	Hết
 Jih jang (đt)	Tất cả.
 Jik (đgt)	Làm
 Jing 	i.(đgt) Là
-	
 Jĭng jai (tt)	Tạm thời.Kâo mă bruă jYØng jai ti anei: Tôi làm việc ở đây tạm thời.
 Jip jap (tt)	Nhếch nhác
 Joh (đgt)	Góy
@@ -2028,9 +1864,6 @@ Juk tô (dt)	Bạn nữ thân thiết nhau (gọi nhau là Juk tô)
 Jŭm dar (tt)	Xung quanh
 Jung (đgt)	Dìu
 Jur (đgt)	Rót (từ ống
-	
-K	
-	
 Ka (pt)	Chưa
 Kă (đgt)	Buộc
 Kač (đgt)	Khăc vẽ
@@ -2050,8 +1883,7 @@ Kar	i.(dt) Ca
 	ii.(đgt) Lọc
 Kar kak (dt)	đế quốc
 Kăl sŏng (dt) (Pr)	Quần đùi.
-Kăm (đgt)	1.Kiêng
-                                 	2.Cấm
+Kăm (đgt)	1.Kiêng                              	2.Cấm
 Kăm ênoh (đgt)	định giá
 Kăn 	Không
 Kăp ƀŭk (đgt)	Căt tóc
@@ -2075,8 +1907,7 @@ Kƀah (tt)	Thiếu
 Kƀăk (đgt)	Treo (măc vào)
 Kƀăt (tt)	Xinh đẹp.
 Kƀao (dt)	Cái bào
-Kƀeh (đgt)	1.Lể
-                                  	2.Mẻ
+Kƀeh (đgt)	1.Lể                              	2.Mẻ
 Kƀei (dt)	Cái bay
 Kƀê̆ñ (đgt)	Rèn
 Kƀiêk ală (dt)	Khóe  măt
