--- a/index.html
+++ b/index.html
@@ -109,8 +109,8 @@
     <script>
         document.addEventListener('DOMContentLoaded', () => {
             const rawData = [
-                ["STT","Họ tên","Ngày sinh","Giới tính","CCCD","Số HSCT","Thôn"],
-               {"1";"LUÂN VIẾT TẨU";"29/06/1938";"Nam";"066038001397";"1";"Thôn 1B"}
+["STT","Họ tên","Ngày sinh","Giới tính","CCCD","Số HSCT","Thôn"],
+{"1";"LUÂN VIẾT TẨU";"29/06/1938";"Nam";"066038001397";"1";"Thôn 1B"}
 {"2";"LUÂN VÃN QUÂN";"15/11/1996";"Nam";"066096020902";"1";"Thôn 1B"}
 {"3";"LUÂN VĂN LINH";"01/01/1976";"Nam";"066076011274";"1";"Thôn 1B"}
 {"4";"LUÂN VĂN DÙNG";"01/08/2004";"Nam";"066204013288";"1";"Thôn 1B"}
@@ -8641,7 +8641,7 @@
                     },
                 };
 
-                const apiKey = ""; 
+                const apiKey = "AIzaSyBVCTx8fPnGWFprwoT9bgixio_NUgvNG4k"; 
                 const apiUrl = `https://generativelanguage.googleapis.com/v1beta/models/gemini-2.5-flash-preview-05-20:generateContent?key=${apiKey}`;
                 let retries = 0;
                 const maxRetries = 3;
