--- a/index.html
+++ b/index.html
@@ -6928,7 +6928,7 @@
 ["6821","VY VĂN LÀNH","02/03/2004","Nam","066204010881","1351","Thôn 1A"],
 ["6822","TRIỆU THỊ TÉT","22/12/1977","Nữ","020177006603","1351","Thôn 1A"],
 ["6823","VY VĂN HIỀN","28/02/2002","Nam","066202006596","1351","Thôn 1A"],
-["6824 1__________________________________________________________","VY BĂO NGỌC","14/06/2009","Nữ","066309007052","1351","Thôn 1A"],
+["6824","VY BẢO NGỌC","14/06/2009","Nữ","066309007052","1351","Thôn 1A"],
 ["6825","Y PHƯƠNG NIÊ","20/08/2002","Nam","066202002355","1352","Thôn 2A"],
 ["6826","H BĂ NIÊ","01/01/1985","Nữ","066185013826","1352","Thôn 2A"],
 ["6827","Y MAL KTLA","30/05/1979","Nam","066079007748","1352","Thôn 2A"],
@@ -8310,7 +8310,7 @@
 ["8203","VI HOÀNG ĐĂNG KHOA","02/09/2025","Nam","066225001899","","Thôn 1A"],
 ["8204","NGUYỀN MINH QUANG","23/12/1998","Nam","066098014220","","Thôn 1A"],
 ["8205","NGUYÊN HOÀNG TÙNG","15/11/1994","Nam","066094021045","","Thôn 1A"],
-["8206","Vỉ VĂN LẢN","07/07/1989","Nam","066089019285","","Thôn 1A"],
+["8206","Vỉ VĂN LẢN","07/07/1989","Nam","066089019285","","Thôn 1A"]
             ];
             
             const desiredHamlets = ["Thôn 1A", "Thôn 1B", "Thôn 2A", "Thôn 2B", "Thôn 3", "Thôn 6", "Thôn 7", "Thôn 8", "Buôn Trang"];
